--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">app_orcamind</string>
+    <string name="submit">Entrar</string>
+    <string name="access">Acesse sua conta</string>
+
 </resources>
