--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,10 @@
     <string name="app_name">app_orcamind</string>
     <string name="submit">Entrar</string>
     <string name="access">Acesse sua conta</string>
+    <string name="register">Registre-se</string>
+    <string name="email">Email</string>
+    <string name="name">Nome</string>
+    <string name="password">Password</string>
+
 
 </resources>
