--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">app_orcamind</string>
+    <string name="welcome">Bem Vindo</string>
+    <string name="ou">Ou</string>
     <string name="submit">Entrar</string>
     <string name="registrar">Cadastrar</string>
     <string name="access">Acesse sua conta</string>
