new_ui_changes_and_adds

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="submit">Entrar</string>
     <string name="registrar">Cadastrar</string>
     <string name="access">Acesse sua conta</string>
-    <string name="resume">Resumo Mensal</string>
+    <string name="resume"> Seu resumo mensal</string>
     <string name="register">Registre-se</string>
     <string name="criarConta">Criar Conta</string>
     <string name="email">Email</string>
