--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="name">Nome</string>
     <string name="password">Senha</string>
     <string name="confirmPassword">Confirmar Senha</string>
+    <string name="revenue">Receita do Mês</string>
 </resources>
